crates/compiler/test_syntax/tests/snapshots/pass/where_clause_on_newline.expr.migrated.roc
f: a, -> U64
 where a implements Hash

f
