crates/compiler/test_syntax/tests/snapshots/fail/error_inline_alias_argument_uppercase.expr.roc
f : List elem -> [Nil, Cons elem a] as LinkedList U
